devops/kustomize/base/api/deploy.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: api
  namespace: default
  annotations:
    description: Defines how to deploy api
  labels:
    name: api
    part-of: hsb
    version: 1.0.0
    component: api
    managed-by: kustomize
    created-by: jeremy.foster
    DataClass: Low
spec:
  replicas: 1
  test: false
  selector:
    part-of: hsb
    component: api
  strategy:
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - api
        from:
          kind: ImageStreamTag
          namespace: e89443-tools
          name: api:dev
  template:
    metadata:
      name: api
      labels:
        part-of: hsb
        component: api
        DataClass: Low
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      containers:
        - name: api
          image: ""
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 250Mi
            requests:
              cpu: 50m
              memory: 100Mi
